1.5/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-deployment
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: wbitt
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
