1.5/service5.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  ports:
  - name: nginx
    port: 9001
    protocol: TCP
    targetPort: 80
    nodePort: 30001
  selector:
    app: nginx
