1.5/service6.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  type: NodePort
  ports:
  - name: multi
    port: 9002
    protocol: TCP
    targetPort: 8080
    nodePort: 30002
  selector:
    app: multitool
