1.5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules: 
    - host: ubu04.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: nginx-svc
              port:
                number: 9001
    - host: ubu04.local
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service: 
              name: multitool-svc
              port:
                number: 9002
